--- a/html/pfappserver/root/static/bower.json
+++ b/html/pfappserver/root/static/bower.json
@@ -5,6 +5,7 @@
     "bootstrap-sass": "v2.3.2.2",
     "font-awesome": "latest",
     "flowtype": "latest",
+    "clipboard": "latest",
     "bootstrap-switch": "1.9.0",
     "bootstrap-datepicker": "1.6.x",
     "jquery": "latest",
