hide informations about web services configuration

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1200,25 +1200,25 @@ The webservices password
 EOT
 
 [webservices.host]
-type=text
+type=hidden
 description=<<EOT
 The webservices host
 EOT
 
 [webservices.proto]
-type=text
+type=hidden
 description=<<EOT
 The webservices proto
 EOT
 
 [webservices.port]
-type=text
+type=hidden
 description=<<EOT
 The webservices port
 EOT
 
 [webservices.aaa_port]
-type=text
+type=hidden
 description=<<EOT
 The AAA webservice port
 EOT
