ignore all python compiled scripts

--- a/.gitignore
+++ b/.gitignore
@@ -179,5 +179,6 @@ var/
 raddb/sites-enabled/
 html/captive-portal/content/node_modules/
 
-raddb/mods-config/python/*.pyc
-raddb/mods-config/python/*.pyo
+# ignore python config files
+*.pyc
+*.pyo
