--- a/conf/systemd/packetfence-radiusd-cli.service
+++ b/conf/systemd/packetfence-radiusd-cli.service
@@ -11,8 +11,9 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 StartLimitBurst=3
 StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/radiusd-cli.pid
-ExecStart=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n cli -fm 
 ExecStartPre=/usr/local/pf/bin/pfcmd service radiusd generateconfig
+ExecStartPre=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n cli -Cxm -lstdout 
+ExecStart=/usr/sbin/radiusd -d /usr/local/pf/raddb  -n cli -fm 
 Restart=on-failure
 Slice=packetfence.slice
 
