proper spacing + regenerate translation file

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1,15 +1,13 @@
 [general.domain]
 type=text
 description=<<EOT
-Domain name of PacketFence system.
-Changing this requires to restart haproxy.
+Domain name of PacketFence system. Changing this requires to restart haproxy.
 EOT
 
 [general.hostname]
 type=text
 description=<<EOT
-Hostname of PacketFence system. This is concatenated with the domain in Apache rewriting rules and therefore must be resolvable by clients.
-Changing this requires to restart haproxy.
+Hostname of PacketFence system. This is concatenated with the domain in Apache rewriting rules and therefore must be resolvable by clients. Changing this requires to restart haproxy.
 EOT
 
 [general.dhcpservers]
