--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1265,6 +1265,13 @@ Defines the amount of seconds after which pfmon attempts to resolve a configurat
 For example, if this is set to 5 minutes, then a resolution will be attempted when the members will be detected running a different version for more than 5 minutes.
 EOT
 
+[active_active.galera_replication]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Whether or not to activate galera cluster when using a cluster
+EOT
+
 [active_active.galera_replication_username]
 type=text
 description=<<EOT
