--- a/conf/log.conf.d/httpd.admin.conf.example
+++ b/conf/log.conf.d/httpd.admin.conf.example
@@ -21,19 +21,19 @@ log4perl.additivity.fingerbank = 0
 log4perl.appender.HTTPD_ADMIN		                                = Log::Dispatch::Syslog
 log4perl.appender.HTTPD_ADMIN.ident     	                        = httpd_admin
 log4perl.appender.HTTPD_ADMIN.facility                                  = local5
-log4perl.appender.HTTPD_ADMIN.layout.ConversionPattern                  = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.HTTPD_ADMIN.layout.ConversionPattern                  = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.HTTPD_ADMIN.layout                                    = PatternLayout
 
 ### General Catalyst (pfappserver) log facility configuration ###
 log4perl.appender.ADMIN_CATALYST		                        = Log::Dispatch::Syslog
 log4perl.appender.ADMIN_CATALYST.ident     	                        = admin_catalyst
 log4perl.appender.ADMIN_CATALYST.facility                               = local5
-log4perl.appender.ADMIN_CATALYST.layout.ConversionPattern               = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.ADMIN_CATALYST.layout.ConversionPattern               = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.ADMIN_CATALYST.layout                                 = PatternLayout
 
 ### General Fingerbank log facility configuration ###
 log4perl.appender.ADMIN_FINGERBANK                                = Log::Dispatch::Syslog
 log4perl.appender.ADMIN_FINGERBANK.ident                          = fingerbank_httpd.admin
 log4perl.appender.ADMIN_FINGERBANK.facility                       = local5
-log4perl.appender.ADMIN_FINGERBANK.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.ADMIN_FINGERBANK.layout.ConversionPattern       = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.ADMIN_FINGERBANK.layout                         = PatternLayout
