--- a/conf/log.conf.d/httpd.collector.conf.example
+++ b/conf/log.conf.d/httpd.collector.conf.example
@@ -9,5 +9,5 @@ log4perl.rootLogger = INFO, HTTPD_COLLECTOR
 log4perl.appender.HTTPD_COLLECTOR		                             = Log::Dispatch::Syslog
 log4perl.appender.HTTPD_COLLECTOR.ident     	                             = httpd_collector
 log4perl.appender.HTTPD_COLLECTOR.facility                                   = local5
-log4perl.appender.HTTPD_COLLECTOR.layout.ConversionPattern                   = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.HTTPD_COLLECTOR.layout.ConversionPattern                   = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.HTTPD_COLLECTOR.layout                                     = PatternLayout
