--- a/conf/log.conf.d/httpd.proxy.conf.example
+++ b/conf/log.conf.d/httpd.proxy.conf.example
@@ -9,5 +9,5 @@ log4perl.rootLogger = INFO, HTTPD_PROXY
 log4perl.appender.HTTPD_PROXY		                                 = Log::Dispatch::Syslog
 log4perl.appender.HTTPD_PROXY.ident     	                         = httpd_proxy
 log4perl.appender.HTTPD_PROXY.facility                                   = local5
-log4perl.appender.HTTPD_PROXY.layout.ConversionPattern                   = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.HTTPD_PROXY.layout.ConversionPattern                   = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.HTTPD_PROXY.layout                                     = PatternLayout
