--- a/conf/log.conf.d/pfconfig.conf.example
+++ b/conf/log.conf.d/pfconfig.conf.example
@@ -7,5 +7,5 @@ log4perl.rootLogger = ERROR, PFCONFIG
 log4perl.appender.PFCONFIG                                = Log::Dispatch::Syslog
 log4perl.appender.PFCONFIG.ident                          = pfconfig
 log4perl.appender.PFCONFIG.facility                       = local5
-log4perl.appender.PFCONFIG.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.PFCONFIG.layout.ConversionPattern       = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.PFCONFIG.layout                         = PatternLayout
