--- a/conf/log.conf.d/pffilter.conf.example
+++ b/conf/log.conf.d/pffilter.conf.example
@@ -9,5 +9,5 @@ log4perl.rootLogger = INFO, PFFILTER
 log4perl.appender.PFFILTER                                = Log::Dispatch::Syslog
 log4perl.appender.PFFILTER.ident                          = pffilter
 log4perl.appender.PFFILTER.facility                       = local5
-log4perl.appender.PFFILTER.layout.ConversionPattern       = %p %X{proc}(%X{tid}): %m (%M)%n
+log4perl.appender.PFFILTER.layout.ConversionPattern       = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.PFFILTER.layout                         = PatternLayout
