(web admin) Obfuscate password fields

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -735,7 +735,7 @@ PacketFence.
 EOT
 
 [database.pass]
-type=text
+type=obfuscated
 description=<<EOT
 Password for the mysql database used by PacketFence.
 EOT
@@ -1193,7 +1193,7 @@ The webservices user name
 EOT
 
 [webservices.pass]
-type=text
+type=obfuscated
 description=<<EOT
 The webservices password
 EOT
