Don't require packetfence-mariadb to start iptables
Since in 2 nodes clusters or with an external DB, this is not necessary

In the case of a 2 node cluster, it starts the DB and tries to offer service with an invalid DB

--- a/conf/systemd/packetfence-iptables.service
+++ b/conf/systemd/packetfence-iptables.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=PacketFence Iptables configuration
-Wants=packetfence-mariadb.service packetfence-config.service
+Wants=packetfence-config.service
 
 [Service]
 StartLimitBurst=3
