obfuscated password fields

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1223,7 +1223,7 @@ The AAA webservice port
 EOT
 
 [active_active.password]
-type=text
+type=obfuscated
 description=<<EOT
 Shared KEY for VRRP protocol (must be the same on all members).
 EOT
@@ -1279,7 +1279,7 @@ Defines the replication username to be used for the MariaDB Galera cluster repli
 EOT
 
 [active_active.galera_replication_password]
-type=text
+type=obfuscated
 description=<<EOT
 Defines the replication password to be used for the MariaDB Galera cluster replication
 EOT
@@ -1387,7 +1387,7 @@ Username for MSE service
 EOT
 
 [mse_tab.pass]
-type=text
+type=obfuscated
 description=<<EOT
 Password for MSE service
 EOT
