(web admin) Add missing modules to jQuery UI
Those are required for draggable and droppable modules.

--- a/html/pfappserver/root/static/bower.json
+++ b/html/pfappserver/root/static/bower.json
@@ -10,5 +10,8 @@
     "bootstrap-datepicker": "1.6.x",
     "jquery": "latest",
     "jquery-ui": "latest"
+  },
+  "resolutions": {
+    "jquery": "3.x"
   }
 }
