--- a/conf/log.conf.d/pfdetect.conf.example
+++ b/conf/log.conf.d/pfdetect.conf.example
@@ -9,5 +9,5 @@ log4perl.rootLogger = INFO, PFDETECT
 log4perl.appender.PFDETECT                                = Log::Dispatch::Syslog
 log4perl.appender.PFDETECT.ident                          = pfdetect
 log4perl.appender.PFDETECT.facility                       = local5
-log4perl.appender.PFDETECT.layout.ConversionPattern       = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
+log4perl.appender.PFDETECT.layout.ConversionPattern       = %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.PFDETECT.layout                         = PatternLayout
