--- a/conf/log.conf.d/pfdhcplistener.conf.example
+++ b/conf/log.conf.d/pfdhcplistener.conf.example
@@ -9,5 +9,5 @@ log4perl.rootLogger = INFO, PFDHCPLISTENER
 log4perl.appender.PFDHCPLISTENER                                = Log::Dispatch::Syslog
 log4perl.appender.PFDHCPLISTENER.ident                          = pfdhcplistener
 log4perl.appender.PFDHCPLISTENER.facility                       = local5
-log4perl.appender.PFDHCPLISTENER.layout.ConversionPattern       = %d{MMM dd HH:mm:ss} %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
+log4perl.appender.PFDHCPLISTENER.layout.ConversionPattern       = %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
 log4perl.appender.PFDHCPLISTENER.layout                         = PatternLayout
