--- a/conf/systemd/packetfence-redis_ntlm_cache.service
+++ b/conf/systemd/packetfence-redis_ntlm_cache.service
@@ -9,7 +9,7 @@ StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/redis_ntlm_cache.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service redis_ntlm_cache generateconfig
 ExecStart=/usr/bin/redis-server /usr/local/pf/var/conf/redis_ntlm_cache.conf --daemonize no
-ExecStop=/usr/bin/kill $MAINPID
+ExecStop=/bin/kill $MAINPID
 Restart=on-failure
 User=pf
 Slice=packetfence.slice
