--- a/conf/httpd.conf.d/httpd.admin.tt.example
+++ b/conf/httpd.conf.d/httpd.admin.tt.example
@@ -280,6 +280,15 @@ ProxyHTMLLinks  script      src for
 
           Header add Set-Cookie "PF_PORTAL=%{X_PORTAL}e; Path=/portal_preview" env=X_PORTAL
       </Location>
+
+      <Location /metrics >
+          RequestHeader unset Accept-Encoding
+          RequestHeader append X-Forwarded-For-PacketFence "127.0.0.1"
+
+          ProxyPass  http://[% graphite_url %]/
+          ProxyPassReverse http://[% graphite_url %]/
+      </Location>
+
       Alias /static [% install_dir %]/html/pfappserver/root/static
       <Location / >
            SetHandler modperl
