--- a/conf/passthrough.lua.tt.example
+++ b/conf/passthrough.lua.tt.example
@@ -14,12 +14,12 @@ core.register_action("select", { "http-req" }, function(txn)
 
     if ( string.match(txn.sf:path(), '/profile.xml')) then
         -- nothing, we let it go through for the XML profiles
-    elseif ( not ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"):lower(), '[% host FILTER lower %]') or[% END %] false ) ) then
+    elseif ( not ([% FOREACH host IN portal_host %] string.match(txn.sf:req_fhdr("Host"):lower(), '^[% host FILTER lower %][0-9:]*$') or[% END %] false ) ) then
         txn:set_var("req.action","proxy")
     else
         if (txn.sf:path() == '/') then
             txn:set_var("req.action","proxy")
-        elseif ( string.match(txn.sf:path(), '/common') or string.match(txn.sf:path(), '/content') or string.match(txn.sf:path(), '/favicon.ico') ) then
+        elseif ( string.match(txn.sf:path(), '^/common') or string.match(txn.sf:path(), '^/content') or string.match(txn.sf:path(), '^/favicon.ico$') ) then
             txn:set_var("req.action","static")
         end
     end
