Use returned radius attributes in order to tests them in rules

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1052,6 +1052,12 @@ description=<<EOT
 List of LDAP attributes that can be used in the sources configuration
 EOT
 
+[advanced.radius_attributes]
+type=merged_list
+description=<<EOT
+List of RADIUS attributes that can be used in the sources configuration
+EOT
+
 [advanced.pfdns_processes]
 type=text
 description=<<EOT
