--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -592,6 +592,12 @@ description=<<EOT
 The role to assign to devices registered from the specific portal. If none is specified, the role of the registrant is used.
 EOT
 
+[device_registration.oses]
+type=fingerbank_select
+description=<<EOT
+Lists of OSES where the MAC vendor will be allowed to be registered via the device registration page.
+EOT
+
 [guests_admin_registration]
 guide_anchor=_access_duration
 
