--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -534,6 +534,24 @@ You can specify the same domain with a different port multiple times and they wi
 The configuration parameter "passthrough" must be enabled for passthroughs to be effective.
 EOT
 
+[fencing.isolation_passthrough]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+When enabled, PacketFence uses pfdns if you defined "Passthroughs" or Apache mod-proxy
+if you defined "Proxy passthroughs" to allow trapped devices to reach web sites.
+EOT
+
+[fencing.isolation_passthroughs]
+type=list
+description=<<EOT
+Comma-delimited list of domains to allow access from the isolation VLAN.
+If no port is specified for the domain (ex: example.com), it opens TCP 80 and 443.
+You can specify a specific port to open (ex: example.com:tcp:25) which opens port 25 in TCP. When no protocol is specified (ex: example.com:25), this opens the port for both the UDP and TCP protocol.
+You can specify the same domain with a different port multiple times and they will be combined.
+The configuration parameter "isolation_passthrough" must be enabled for passthroughs to be effective.
+EOT
+
 [fencing.proxy_passthroughs]
 type=merged_list
 description=<<EOT
