--- a/conf/iptables.conf.example
+++ b/conf/iptables.conf.example
@@ -96,6 +96,23 @@
 -A input-internal-vlan-if --protocol tcp --match tcp --dport 5252 --jump ACCEPT
 %%input_inter_vlan_if%%
 
+
+:input-internal-isol_vlan-if - [0:0]
+-A input-internal-isol_vlan-if -m set --match-set portal_deny src --jump REJECT
+# DNS
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 53  --jump ACCEPT
+-A input-internal-isol_vlan-if --protocol udp --match udp --dport 53  --jump ACCEPT
+# DHCP
+-A input-internal-isol_vlan-if --protocol udp --match udp --dport 67  --jump ACCEPT
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 67  --jump ACCEPT
+# HTTP (captive-portal) 
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 80  --jump ACCEPT
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 443 --jump ACCEPT
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 647 --jump ACCEPT
+# HTTP (parking portal)
+-A input-internal-isol_vlan-if --protocol tcp --match tcp --dport 5252 --jump ACCEPT
+%%input_inter_isol_vlan_if%%
+
 :input-internal-inline-if - [0:0]
 # DHCP
 -A input-internal-inline-if --protocol udp --match udp --dport 67  --jump ACCEPT
@@ -145,6 +162,9 @@
 :FORWARD DROP [0:0]
 :forward-internal-vlan-if - [0:0]
 %%filter_forward_vlan%%
+
+:forward-internal-isol_vlan-if - [0:0]
+%%filter_forward_isol_vlan%%
 
 :forward-internal-inline-if - [0:0]
 %%filter_forward_inline%%
