Portal CSP includes connectivity test image url. Portal and Admin enforces CSP Security Headers by default that trust everything that comes from self.

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1069,6 +1069,12 @@ type=numeric
 description=<<EOT
 Amount of requests on invalid URLs after which the rate limiting will kick in for this device.
 Requires to restart haproxy in order to apply the change.
+
+[advanced.csp_security_headers]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+CSP Security Headers enforced through portal and admin interfaces
 EOT
 
 [advanced.language]
