--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -592,10 +592,10 @@ description=<<EOT
 The role to assign to devices registered from the specific portal. If none is specified, the role of the registrant is used.
 EOT
 
-[device_registration.oses]
+[device_registration.allowed_devices]
 type=fingerbank_select
 description=<<EOT
-Lists of OSES where the MAC vendor will be allowed to be registered via the device registration page.
+List of allowed devices to be registered via the device registration page.
 EOT
 
 [guests_admin_registration]
