--- a/conf/httpd.conf.d/httpd.collector.tt.example
+++ b/conf/httpd.conf.d/httpd.collector.tt.example
@@ -49,7 +49,9 @@
   <IfModule !mod_setenvif.c>
     LoadModule setenvif_module /usr/lib/apache2/modules/mod_setenvif.so
   </IfModule>
-
+  <IfModule !mod_systemd.c>
+    LoadModule systemd_module     /usr/lib/apache2/modules/mod_systemd.so
+  </IfModule>
 </IfDefine>
 
 #RHEL Specific
@@ -100,6 +102,9 @@
   </IfModule>
   <IfModule !mod_setenvif.c>
     LoadModule setenvif_module modules/mod_setenvif.so
+  </IfModule>
+  <IfModule !mod_systemd.c>
+    LoadModule systemd_module   modules/mod_systemd.so
   </IfModule>
 </IfDefine>
 
