--- a/conf/systemd/packetfence-httpd.admin.service
+++ b/conf/systemd/packetfence-httpd.admin.service
@@ -8,7 +8,7 @@ After=packetfence-base.target packetfence-config.service packetfence-haproxy.ser
 [Service]
 StartLimitBurst=3
 StartLimitInterval=60
-Type=simple
+Type=notify
 PIDFile=/usr/local/pf/var/run/httpd.admin.pid
 Environment=X_PORTAL=default
 ExecStartPre=/usr/local/pf/bin/pfcmd service httpd.admin generateconfig
