--- a/conf/systemd/packetfence-httpd.graphite.service
+++ b/conf/systemd/packetfence-httpd.graphite.service
@@ -8,7 +8,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 [Service]
 StartLimitBurst=3
 StartLimitInterval=60
-Type=simple
+Type=notify
 PIDFile=/usr/local/pf/var/run/httpd.graphite.pid
 ExecStartPre=/usr/local/pf/bin/pfcmd service httpd.graphite generateconfig
 ExecStart=/usr/sbin/httpd -f /usr/local/pf/var/conf/httpd.conf.d/httpd.graphite -DFOREGROUND  -Drhel
