(web admin) Update raphael JS library

--- a/html/pfappserver/root/static/bower.json
+++ b/html/pfappserver/root/static/bower.json
@@ -11,7 +11,8 @@
     "bootstrap-datepicker": "1.6.x",
     "chosen": "v1.7.0",
     "jquery": "latest",
-    "jquery-ui": "latest"
+    "jquery-ui": "latest",
+    "raphael": "2.x"
   },
   "resolutions": {
     "jquery": "3.x"
