--- a/html/pfappserver/root/static/package.json
+++ b/html/pfappserver/root/static/package.json
@@ -7,6 +7,7 @@
     "autoprefixer": ">=6.0.3",
     "bower": ">=1.3.8",
     "grunt": ">=0.4.1",
+    "grunt-cli": "^1.2.0",
     "grunt-contrib-cssmin": "latest",
     "grunt-contrib-concat": "latest",
     "grunt-contrib-jshint": ">=0.11.2",
