--- a/addons/ZEN-vagrant-builder/Vagrantfile
+++ b/addons/ZEN-vagrant-builder/Vagrantfile
@@ -77,5 +77,7 @@ Vagrant.configure("2") do |config|
     echo "Installing $PFPACKAGE from repo $PFREPO"
 
     /vagrant/installer/install-pf.sh
+
+    userdel vagrant
   SHELL
 end
