--- a/conf/log.conf.d/winbindd-wrapper.conf.example
+++ b/conf/log.conf.d/winbindd-wrapper.conf.example
@@ -1,4 +1,13 @@
-### WINBINDD_WRAPPER logger ###
-#log4perl.rootLogger = INFO, PFSYSLOG
+### winbindd-wrapper logger ###
+log4perl.rootLogger = INFO, WINBINDD_WRAPPER
 
 ### Categories ###
+# Below, you can specify different categories (based on package names) for different logging levels
+#log4perl.category.pf.SNMP = WARN
+
+### Logging for winbindd-wrapper
+log4perl.appender.WINBINDD_WRAPPER                                = Log::Dispatch::Syslog
+log4perl.appender.WINBINDD_WRAPPER.ident                          = packetfence_winbindd-wrapper
+log4perl.appender.WINBINDD_WRAPPER.facility                       = local5
+log4perl.appender.WINBINDD_WRAPPER.layout.ConversionPattern       = %X{proc}(%X{tid}) %p: [mac:%X{mac}] %m (%M)%n
+log4perl.appender.WINBINDD_WRAPPER.layout                         = PatternLayout
