Changed logging tag so it's valid for aaa and webservices.

--- a/conf/httpd.conf.d/httpd.webservices.tt.example
+++ b/conf/httpd.conf.d/httpd.webservices.tt.example
@@ -164,7 +164,7 @@ SSLHonorCipherOrder  on
 
 TraceEnable Off
 
-ErrorLog "| /usr/bin/logger -thttpd_webservices_err -plocal5.err"  
+ErrorLog "| /usr/bin/logger -t[% name | replace('\.', '_') %]_err -plocal5.err"  
 
 User pf
 Group pf
@@ -193,8 +193,8 @@ Listen [% vhost %]:[% port %]
 <VirtualHost [% vhost %]:[% port %] >
     ServerName [% server_name %]
     DocumentRoot [% install_dir %]/html/pfappserver/lib
-    ErrorLog "| /usr/bin/logger -thttpd_webservices_err -plocal5.err"  
-    CustomLog "| /usr/bin/logger -thttpd_webservices -plocal5.info" combined
+    ErrorLog "| /usr/bin/logger -t[% name | replace('\.', '_') %]_err -plocal5.err"  
+    CustomLog "| /usr/bin/logger -t[% name | replace('\.', '_') %] -plocal5.info" combined
     SSLEngine on
     Include [% var_dir %]/conf/ssl-certificates.conf
     <Location / >
@@ -214,8 +214,8 @@ Listen 127.0.0.1:[% port %]
 <VirtualHost 127.0.0.1:[% port %] >
     ServerName [% server_name %]
     DocumentRoot [% install_dir %]/html/pfappserver/lib
-    ErrorLog "| /usr/bin/logger -thttpd_webservices_err -plocal5.err"  
-    CustomLog "| /usr/bin/logger -thttpd_webservices -plocal5.info" combined
+    ErrorLog "| /usr/bin/logger -t[% name | replace('\.', '_') %]_err -plocal5.err"  
+    CustomLog "| /usr/bin/logger -t[% name | replace('\.', '_') %] -plocal5.info" combined
     SetHandler modperl
     PerlResponseHandler pf::WebAPI
     <Location / >
