Added unit file configuration to support caddy sd_notify.

--- a/conf/systemd/packetfence-httpd.dispatcher.service
+++ b/conf/systemd/packetfence-httpd.dispatcher.service
@@ -5,6 +5,8 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 Before=packetfence-httpd.portal.service
 
 [Service]
+Type=notify
+LimitNOFILE=8192
 ExecStart=/usr/local/pf/bin/pfhttpd -conf /usr/local/pf/conf/caddy-services/httpdispatcher.conf
 Restart=on-failure
 Slice=packetfence.slice
