--- a/conf/systemd/packetfence-pffilter.service
+++ b/conf/systemd/packetfence-pffilter.service
@@ -4,6 +4,7 @@ Wants=packetfence-base.target packetfence-config.service packetfence-iptables.se
 After=packetfence-base.target packetfence-config.service packetfence-iptables.service packetfence-redis_queue.service
 
 [Service]
+Type=notify
 StartLimitBurst=3
 StartLimitInterval=60
 PIDFile=/usr/local/pf/var/run/pffilter.pid
