--- a/conf/systemd/packetfence-winbindd.service
+++ b/conf/systemd/packetfence-winbindd.service
@@ -5,6 +5,7 @@ After=packetfence-base.target packetfence-config.service packetfence-iptables.se
 Before=packetfence-radiusd-auth.service
 
 [Service]
+Type=notify
 StartLimitBurst=3
 StartLimitInterval=60
 ExecStartPre=/usr/local/pf/bin/pfcmd service winbindd generateconfig
