allowed ALL if none + typos

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -595,7 +595,7 @@ EOT
 [device_registration.allowed_devices]
 type=fingerbank_select
 description=<<EOT
-List of allowed devices to be registered via the device registration page.
+List of allowed devices to be registered via the device registration page. If none are specified, ALL devices will be allowed.
 EOT
 
 [guests_admin_registration]
