Fixed documentation and simplify code

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -538,8 +538,8 @@ EOT
 type=toggle
 options=enabled|disabled
 description=<<EOT
-When enabled, PacketFence uses pfdns if you defined "Passthroughs" or Apache mod-proxy
-if you defined "Proxy passthroughs" to allow trapped devices to reach web sites.
+When enabled, PacketFence uses pfdns if you defined "Isolation Passthroughs" 
+to allow trapped devices in isolation state to reach web sites.
 EOT
 
 [fencing.isolation_passthroughs]
