--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -532,6 +532,7 @@ If no port is specified for the domain (ex: example.com), it opens TCP 80 and 44
 You can specify a specific port to open (ex: example.com:tcp:25) which opens port 25 in TCP. When no protocol is specified (ex: example.com:25), this opens the port for both the UDP and TCP protocol.
 You can specify the same domain with a different port multiple times and they will be combined.
 The configuration parameter "passthrough" must be enabled for passthroughs to be effective.
+These passthroughs are only effective in registration networks, for passthroughs in isolation, use fencing.isolation_passthroughs
 EOT
 
 [fencing.isolation_passthrough]
