--- a/conf/iptables.conf.example
+++ b/conf/iptables.conf.example
@@ -44,6 +44,7 @@
 -A input-management-if --protocol udp --match udp --dport 1813 --jump ACCEPT
 -A input-management-if --protocol tcp --match tcp --dport 1815 --jump ACCEPT
 -A input-management-if --protocol udp --match udp --dport 1815 --jump ACCEPT
+-A input-management-if --protocol tcp --match tcp --dport 2083 --jump ACCEPT
 # RADIUS (eduroam virtual-server)
 %%eduroam_radius_virtualserver%%
 # SNMP Traps
@@ -79,6 +80,7 @@
 -A input-radius-if --protocol udp --match udp --dport 1813 --jump ACCEPT
 -A input-radius-if --protocol tcp --match tcp --dport 1815 --jump ACCEPT
 -A input-radius-if --protocol udp --match udp --dport 1815 --jump ACCEPT
+-A input-radius-if --protocol tcp --match tcp --dport 2083 --jump ACCEPT
 %%eduroam_radius_listening%%
 
 :input-internal-vlan-if - [0:0]
