Add new configuration item advanced.normalize_radius_machine_auth_username

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -1123,6 +1123,13 @@ description=<<EOT
 Ability to manage all active devices from a same switch port
 EOT
 
+[advanced.normalize_radius_machine_auth_username]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+Normalize the radius machine auth username
+EOT
+
 [omapi.ip2mac_lookup]
 type=toggle
 options=enabled|disabled
