--- a/conf/haproxy.conf.example
+++ b/conf/haproxy.conf.example
@@ -42,7 +42,7 @@ defaults
         timeout client 50000
         timeout server 50000
         errorfile 400 %%os_path%%400.http
-        errorfile 403 %%os_path%%403.http
+        errorfile 403 %%captiveportal_templates_path%%/rate-limiting.http
         errorfile 408 %%os_path%%408.http
         errorfile 500 %%os_path%%500.http
         errorfile 502 %%os_path%%502.http
