Update documentation.conf and test

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -330,6 +330,19 @@ Location of the haproxy binary. Only necessary to change if you are
 not running the RPMed version.
 EOT
 
+[services.go_dhcpd_binary]
+type=hidden
+description=<<EOT
+Location of the go_dhcpd binary.
+EOT
+
+[services.etcd_binary]
+type=hidden
+description=<<EOT
+Location of the etcd binary.
+EOT
+
+
 [services.winbindd]
 type=toggle
 options=enabled|disabled
