--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -648,6 +648,40 @@ violations with an action of "email", or any other PacketFence-related
 message.
 EOT
 
+[alerting.encryption]
+type=toggle
+options=none|ssl|starttls
+description=<<EOT
+What encryption type to use.
+EOT
+
+[alerting.port]
+type=number
+description=<<EOT
+The port to connect to the SMTP.
+ If the port is set to 0 then port is calculated by the encryption type.
+ none : 25, ssl : 465, starttls : 587
+EOT
+
+[alerting.username]
+type=text
+description=<<EOT
+Username
+EOT
+
+[alerting.password]
+type=text
+description=<<EOT
+Password
+EOT
+
+[alerting.verify_ssl]
+type=toggle
+options=enabled|disabled
+description=<<EOT
+SSL
+EOT
+
 [ports.admin]
 type=text
 description=<<EOT
