added streamscan parsing module

--- a/t/data/pfdetect.conf
+++ b/t/data/pfdetect.conf
@@ -22,3 +22,9 @@ path=/dev/null
 type=fortianalyser
 status=enabled
 path=/dev/null
+
+[streamscan]
+type=streamscan
+status=enabled
+path=/dev/null
+
