--- a/conf/systemd/packetfence-httpd.admin.service
+++ b/conf/systemd/packetfence-httpd.admin.service
@@ -20,7 +20,8 @@ ExecStop=/bin/kill -WINCH ${MAINPID}
 # graceful stop. Normally, Systemd sends SIGTERM signal right after the
 # ExecStop, which would kill httpd. We are sending useless SIGCONT here to give
 # httpd time to finish.
-KillMode=process
+TimeoutStopSec=60
+KillMode=mixed
 KillSignal=SIGCONT
 PrivateTmp=true
 Restart=on-failure
