New parameter timeout

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -682,6 +682,12 @@ description=<<EOT
 Verify SSL connection
 EOT
 
+[alerting.timeout]
+type=number
+description=<<EOT
+The timeout in seconds for sending an email
+EOT
+
 [ports.admin]
 type=text
 description=<<EOT
