--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,9 @@ Architecture: all
 Pre-Depends:  ca-certificates, 
  dhcp3-server | isc-dhcp-server, ca-certificates, winbind,
  packetfence-pfcmd-suid (>= ${source:Version}), packetfence-config (>= ${source:Version}), packetfence-ntlm-wrapper (>= ${source:Version}), packetfence-doc (>= ${source:Version}),
- fingerbank (>= 3.1.1), packetfence-redis-cache (>= ${source:Version}), packetfence-golang-daemon (>= ${source:Version}),
+# CAUTION: we need to require the version we want for Fingerbank and ensure we don't want anything equal or above the next major release as it can add breaking changes
+ fingerbank (>= 3.1.1), fingerbank (<< 4.0.0),
+ packetfence-redis-cache (>= ${source:Version}), packetfence-golang-daemon (>= ${source:Version}),
 # wmi
  libnet-wmiclient-perl, libwmiclient1, wmi-client,
 Breaks: libdata-alias-perl
