--- a/debian/control
+++ b/debian/control
@@ -82,7 +82,7 @@ Depends: ${misc:Depends}, vlan,
  libnet-appliance-session-perl (>= 2.111080),
  libnet-ssh2-perl (>= 0.63),
  libnet-cli-interact-perl,
- libnet-interface-perl, libnet-radius-perl,
+ libnet-interface-perl, libnet-radius-perl, libclass-xsaccessor-perl,
  libparse-nessus-nbe-perl, libtest-mockdbi-perl,
  libsoap-lite-perl (>= 1.0), libnet-frame-perl, libthread-pool-perl,
  libwww-curl-perl, libposix-2008-perl, libdata-messagepack-stream-perl, libdata-messagepack-perl,
