loaded list of timezones

--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -17,7 +17,7 @@ Comma-delimited list of DHCP servers.
 EOT
 
 [general.timezone]
-type=text
+type=timezone
 description=<<EOT
 System's timezone in string format. Supported list: 
 http://www.php.net/manual/en/timezones.php
