--- a/conf/systemd/packetfence-mariadb.service
+++ b/conf/systemd/packetfence-mariadb.service
@@ -7,6 +7,7 @@ Wants=packetfence-config.service
 Conflicts=mysql.service mariadb.service
 
 [Service]
+LimitNOFILE=4096
 Type=notify
 # Setting this to true can break replication and the Type=notify settings
 # See also bind-address mysqld option.
