--- a/conf/systemd/packetfence-mariadb.service
+++ b/conf/systemd/packetfence-mariadb.service
@@ -7,7 +7,6 @@ Wants=packetfence-config.service
 Conflicts=mysql.service mariadb.service
 
 [Service]
-LimitNOFILE=4096
 Type=notify
 # Setting this to true can break replication and the Type=notify settings
 # See also bind-address mysqld option.
@@ -28,6 +27,10 @@ TimeoutSec=300
 
 # Place temp files in a secure directory, not /tmp
 PrivateTmp=true
+
+# Avoid downscaling max_connections on the MySQL instance (214)
+# See https://github.com/inverse-inc/packetfence/issues/2502
+LimitNOFILE=4096
 
 [Install]
 WantedBy=packetfence-base.target
