--- a/conf/documentation.conf
+++ b/conf/documentation.conf
@@ -19,8 +19,7 @@ EOT
 [general.timezone]
 type=timezone
 description=<<EOT
-System's timezone in string format. Supported list: 
-http://www.php.net/manual/en/timezones.php
+System's timezone in string format. List generated from Perl library DataTime::TimeZone
 EOT
 
 [network.dhcpdetector]
