(web admin) Update chosen library to version 1.7.0
We use the JavaScript code as-is, but the CSS has been converted to Sass
and adapted to PF admin's look'n'feel.

--- a/html/pfappserver/root/static/bower.json
+++ b/html/pfappserver/root/static/bower.json
@@ -8,6 +8,7 @@
     "clipboard": "latest",
     "bootstrap-switch": "1.9.0",
     "bootstrap-datepicker": "1.6.x",
+    "chosen": "v1.7.0",
     "jquery": "latest",
     "jquery-ui": "latest"
   },
